--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "license": "",
   "scripts": {
     "build": "npm run build:css && remix build",
-    "build:css": "tailwindcss -o ./app/tailwind.css",
+    "build:css": "tailwindcss -o ./app/styles/tailwind.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
-    "postinstall": "remix setup node"
+    "dev:css": "tailwindcss -o ./app/styles/tailwind.css --watch",
+    "postinstall": "remix setup node",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|gql|graphql|mdx|vue)\"",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/.eslintcache --ext js,jsx,ts,tsx ."
   },
   "dependencies": {
     "@remix-run/react": "^1.3.3",
@@ -22,8 +24,13 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^1.3.3",
+    "@remix-run/eslint-config": "^1.3.3",
     "@tailwindcss/typography": "^0.5.1",
     "concurrently": "^7.0.0",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.0",
     "tailwindcss": "^3.0.18"
   },
   "engines": {
