--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/react": "^1.3.3",
     "@remix-run/serve": "^1.3.3",
     "@remix-run/vercel": "^1.3.3",
+    "clsx": "^1.1.1",
     "glob": "^7.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,12 +27,17 @@
     "@remix-run/dev": "^1.3.3",
     "@remix-run/eslint-config": "^1.3.3",
     "@tailwindcss/typography": "^0.5.1",
+    "@types/react": "^17.0.42",
+    "@types/react-dom": "^17.0.14",
+    "autoprefixer": "^10.4.4",
     "concurrently": "^7.0.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "postcss": "^8.4.12",
     "prettier": "^2.6.0",
-    "tailwindcss": "^3.0.18"
+    "tailwindcss": "^3.0.18",
+    "typescript": "^4.6.2"
   },
   "engines": {
     "node": ">=14"
